Fixed the swap transition But disabled it because unless I can get the text to change to right align properly, I don't want it.

--- a/app/assets/stylesheets/nowPlaying.scss
+++ b/app/assets/stylesheets/nowPlaying.scss
@@ -38,7 +38,7 @@ $right: ($pad / 2);
 
       @include gleam(14px);
 
-      -webkit-animation: cover-position-swap 20s infinite $easeInOutCubic;
+      //-webkit-animation: cover-position-swap 40s infinite $easeInOutCubic;
       
       img { width: 100%; }
     }
@@ -52,7 +52,7 @@ $right: ($pad / 2);
       color: white;
       text-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
       
-      -webkit-animation: details-position-swap 20s infinite $easeInOutCubic;
+      //-webkit-animation: details-position-swap 40s infinite $easeInOutCubic;
 
       .album-artist-info {
         margin: 0 0 12px;
@@ -92,21 +92,21 @@ $right: ($pad / 2);
 }
 
 @-webkit-keyframes cover-position-swap {
-  0%, 40%, 100% {
+  0%, 48%, 100% {
     margin-left: $left;
   }
 
-  45%, 95% {
+  50%, 98% {
     margin-left: $right;
   }
 }
 
 @-webkit-keyframes details-position-swap {
-  0%, 40%, 100% {
+  0%, 48%, 100% {
     margin-left: $right;
   }
 
-  45%, 95% {
+  50%, 98% {
     margin-left: $left;
   }
 }
